Fixed scroll button triggering floating footer on small screens

--- a/style/banners.css
+++ b/style/banners.css
@@ -45,7 +45,7 @@
 	background-color: rgb(255, 255, 255);
 	width: 20px;
 	position: relative;
-	margin-bottom: 15vh;
+	margin-bottom: 100px;
 	
 	align-self: flex-end;
 
